--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-.venv
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+/data
 
 # dependencies
 /node_modules
@@ -13,6 +14,7 @@
 /build
 
 # misc
+.venv
 .DS_Store
 .env.local
 .env.development.local
