--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "5.0.1",
     "recharts": "^2.8.0",
     "web-vitals": "^2.1.4"
   },
@@ -17,12 +17,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -37,6 +31,6 @@
     ]
   },
   "devDependencies": {
-
+    "eslint-config-standard": "^17.1.0"
   }
 }
