Ticker Input component

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -10,4 +10,8 @@ parserOptions:
   sourceType: module
 plugins:
   - react
-rules: {}
+rules:
+  indent:
+    - error
+    - 4
+  no-unused-vars: off
